# Langchain-Retrievers

./: Contextual-Compression-Retriever.ipynb  Maximal-Marginal-Relevance.ipynb  Multi-query-Retriever.ipynb  Vector-store-Retriever.ipynb  Wikipedia-Retriever.ipynb  main.py  pyproject.toml  requirements.txt
