[project]
name = "langchain-retrievers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "wikipedia>=1.4.0",
]
